# CM_2026

./: .Rhistory  CM_2026.Rproj  README.md  Week 9.Rmd  pyproject.toml  testpush.Rmd
Week 1/: compmus2026-w07.qmd
Week 4/dat/: Brain Damage mel.csv  Brain Damage.csv  Breathe (In the Air) mel.csv  Breathe (In the Air).csv  Otro Atrardecer mel.csv  Otro Atrardecer.csv
Week 5/data/: Ingobernable Autocorrelation.csv  Ingobernable Fourier.csv  Ingobernable Novelty.csv  Otro Atardecer Novelty.csv  Otro Atardecer.csv  Runaway.csv
docs/: index.html  index.qmd
docs/Images/Week 11/: Ingobernable_Novelty
