[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CM"
version = "0.1.0"
description = "CM project for UvA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core
    "numpy==2.3.4",                
    "h5py==3.14.0",                  
    "pandas==3.0.0",                 
    "matplotlib==3.10.6",       
    "seaborn==0.13.2",              
    "tqdm==4.67.1",                  
    "PyYAML==6.0.3",                 
    "python-dotenv==1.1.1",
    "jupyter"                

                   
]